# NXPCUP2026-TRIPPLE-C

./: .default_mex  .gitignore  .project  CMakeLists.txt  CMakePresets.json  flags.cmake  mcux_include.json  nxpcup LinkServer Debug.launch  nxpcup.mex  nxpcup_Debug.ld  nxpcup_Debug_library.ld  nxpcup_Debug_memory.ld  updater.py
Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  nxpcup.elf  nxpcup_cm33_core0_Debug.ld  nxpcup_cm33_core0_Debug_library.ld  nxpcup_cm33_core0_Debug_memory.ld  output.map
Debug/.cmake/api/v1/reply/: cache-v2-000137fd3818897c6905.json  cmakeFiles-v1-41bcd3c61997171f925a.json  codemodel-v2-d978edd5d3685664b398.json  index-2026-07-07T10-44-30-0986.json  target-nxpcup.elf-Debug-b3d8c18f390eb7781ed6.json  toolchains-v1-69e8ab4be8d5f8d9d164.json
board/: clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
drivers/: fsl_lpi2c.c
include/: Config.h  esc.h  hbridge.h  pixy.h  servo.h
source/: esc.c  hbridge.c  main.c  mcux_config.h  pixy.c  semihost_hardfault.c  servo.c  simple_movement.c
